<resources>
    <string name="app_name" translatable="false">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="hint" translatable="false">hint</string>
    <string name="asking_account">Don\'t have account? Register</string>
    <string name="asking_login">Already have account? Login</string>
    <string name="register">Register</string>
    <string name="password_error_info">Password atleast 6 chars</string>
    <string name="email_error_info">Email not valid</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="greeting">Hello, &#160;</string>
    <string name="story_detail">Story Detail</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description_hint">Add story description</string>
    <string name="upload">Upload</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="back">Kembali</string>
    <string name="retry">Ulangi</string>
</resources>